# user_manager

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  qml.qrc
qml/: main.qml
qml/popups/: AboutProgram.qml  AddNewGroupPopup.qml  AddNewUserPopup.qml  ChangeUserPasswordPopup.qml  GroupManagerPopup.qml  GroupPropertiesPopup.qml
qml/theme/: Theme.qml
qml/widgets/: CustomButton.qml  CustomCheckBox.qml  CustomText.qml
src/: loger.cpp  loger.h  main.cpp  users.cpp  users.h
